# ChomoSyncer

./: .gitignore  CMakeLists.txt  LICENSE  config.ini  install_guide.md  install_guide_win.md  readme.md
docs/: install_guide_ubu.md
src/: main.cpp
src/config/: config.h
src/dataSync/: exBinance.cpp  exBinance.h
src/db/: marketDataStreamManager.cpp  marketDataStreamManager.h  mongoManager.cpp  mongoManager.h
src/dtos/: kline.h  settlementItem.h
src/logging/: rotatingLogger.cpp  rotatingLogger.h
src/ta/: indicator_calculator.h  indicator_manager.cpp  indicator_manager.h  indicator_result.h  indicator_state.h  rsi.cpp  rsi.h
src/validation/: kline_sanity_check.py  mongo_io.py  rsi_validate.py
